# smartconvert

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
static/: style.css
static/js/: bmi.js
templates/: about.html  bmi.html  calendar.html  calorie.html  compensation.html  compound.html  exchange.html  footer.html  header.html  index.html  insurance.html  zodiac.html
