[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask-caching==2.3.0",
    "flask==3.1.0",
    "flask-wtf==1.2.2",
    "flask-session==0.8.0",
    "flask-sqlalchemy==3.1.1",
    "flask-httpauth==4.8.0",
    "flask-migrate==4.0.7",
    "flask-restful==0.3.10",
    "flask-babel==4.0.0",
    "flask-limiter==3.9.2",
    "flask-jwt-extended==4.7.1",
    "flask-cors==5.0.0",
    "flask-login==0.6.3",
]
